--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <activity
             android:name=".features.materiedukasi.MateriEdukasiActivity"
             android:exported="false" />
+        <activity android:name=".features.materiedukasi.DetailMateriActivity"
+            android:exported="false" />
         <activity
             android:name=".features.penerjemahanisyarat.PenerjemahanIsyarat"
             android:exported="false" />
