--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,8 @@
         <activity
             android:name=".features.tekskevideo.TeksKeVideo"
             android:exported="false" />
-        <activity
-            android:name=".MateriEdukasi"
-            android:exported="false" />
+        <activity android:name=".EdukasiDetail" />
+        <activity android:name=".MateriEdukasi" />
         <activity android:name=".features.materiedukasi.DetailMateriActivity"
             android:exported="false" />
         <activity
